apps/upsnap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upsnap
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: upsnap
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
