apps/upsnap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upsnap
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: upsnap
      port:
        number: 8090
  tls:
    - hosts:
        - upsnap
